--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,8 @@ jobs:
       with:
         node-version: 12
         registry-url: https://registry.npmjs.org/
+        scope: frontspace
     - run: npm ci
-    - run: npm publish
+    - run: npm publish --access=public --@frontspace:registry=https://registry.npmjs.org/
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
